--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <!--  Scripts-->
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="js/materialize.js"></script>
+  <script src="js/init.js"></script>
 </head>
 <body>
   <div class="navbar-fixed">
@@ -40,7 +44,6 @@
   </div>
   <div class="container">
     <div class="section">
-
       <!--   Icon Section   -->
       <div class="row">
         <div class="col s12 m12">
@@ -51,9 +54,21 @@
           </div>
         </div>
       </div>
-
     </div>
     <br><br>
+    <div class="section">
+        <!--   Icon Section   -->
+        <div class="row">
+          <div class="col s12 m12">
+            <div class="icon-block">
+              <h5 class="center">Repositórios</h5>
+              <br>
+              <span id="loader"></span>
+              <span id="repos" class="light"></span>
+            </div>
+          </div>
+        </div>
+      </div>
   </div>
 
   <footer class="page-footer orange">
@@ -63,12 +78,6 @@
       </div>
     </div>
   </footer>
-
-
-  <!--  Scripts-->
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="js/materialize.js"></script>
-  <script src="js/init.js"></script>
 
   </body>
 </html>
